# Stochastic_SGSIM

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  Pipfile  README.md  UC_SGSIM.c  UC_SGSIM.ipynb  UC_SGSIM.py  UC_SGSIM_GUI.py  UC_SGSIM_c_example.c  UC_SGSIM_py_example.py  Variogram.c  c_example.c  cmake_build.bat  cmake_build.sh  codecov.yml  pytest.ini  python_example.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: cmake.yml  codeql.yml  github-pre-commit.yml  pre_commit.yml  pypi.yml  sonarcloud.yml  sonarclould.yml
UC_SGSIM_c/: .gitignore
UC_SGSIM_c/header/: cov_model.h  krige.h  matrix_tools.h  random_tools.h  sgsim.h  sort_tools.h  variogram.h
UC_SGSIM_c/model/: .gitignore  cov_model.c  krige.c  matrix_tools.c  random_tools.c  sgsim.c  sort_tools.c  variogram.c
UC_SGSIM_cpp/: CmakeLists.txt  README.md
UC_SGSIM_cpp/app/: .gitignore  app.cpp  compile.bat
UC_SGSIM_cpp/googletest/: cov_model_test.cpp  matrix_tools_test.cpp  sort_tools_test.cpp
UC_SGSIM_cpp/header/: cov_model.hpp  krige.hpp  matrix_tools.hpp  random_tools.hpp  sgsim.hpp  sort_tools.hpp
UC_SGSIM_cpp/model/: CmakeLists.txt  cov_model.cpp  krige.cpp  matrix_tools.cpp  random_tools.cpp  sgsim.cpp  sort_tools.cpp
UC_SGSIM_py/: UC_SGSIM.py  __init__.py
UC_SGSIM_py/Cov_Model/: __init__.py  base.py  model.py
UC_SGSIM_py/GUI/: Tkinter_GUI.py  __init__.py  base.py
UC_SGSIM_py/Plot/: Plot.py  base.py
build_scripts/: cmake_build.sh
tests/: cov_model_test.py  krige_test.py  uc_sgsim_test.py
uc_sgsim/: CMakeLists.txt  UC_SGSIM.py  __init__.py  random_field.py  sgsim.py  utils.py
uc_sgsim/Cov_Model/: __init__.py  base.py  model.py
uc_sgsim/Krige/: __init__.py  base.py  kriging.py
uc_sgsim/Plot/: Plot.py  __init__.py  base.py
uc_sgsim/c_core/: .gitignore  CMakeLists.txt  UC_SGSIM_c_example.c  build.bat  build.sh  build_dll.bat  build_so_lib.sh  cmake_build.bat  cmake_build.sh
uc_sgsim/c_core/header/: cov_model.h  krige.h  matrix_tools.h  random_tools.h  sgsim.h  sort_tools.h  variogram.h
uc_sgsim/c_core/include/: c_array.h  cov_model.h  krige.h  kriging.h  matrix_tools.h  random_tools.h  sgsim.h  sort_tools.h  variogram.h
uc_sgsim/c_core/lib/: c_array_mt.c
uc_sgsim/c_core/model/: .gitignore  cov_model.c  krige.c  matrix_tools.c  random_tools.c  sgsim.c  sort_tools.c  variogram.c
uc_sgsim/c_core/src/: c_array.c  c_array_mt.c  cov_model.c  krige.c  kriging.c  matrix_tools.c  random_tools.c  sgsim.c  sort_tools.c  variogram.c
uc_sgsim/c_core/tests/: sgsim_test.c  utest.h
uc_sgsim/cov_model/: __init__.py  base.py  model.py
uc_sgsim/krige/: __init__.py  base.py  kriging.py
uc_sgsim/kriging/: base.py  kriging.py
uc_sgsim/plot/: __init__.py  base.py  plot.py
uc_sgsim/plotting/: base.py  sgsim_plot.py
